Refactor caching system